# volleyball_detection

./: .gitignore  README.md  Station_detector.md  run.sh  start_all.sh  start_executor.sh  start_realsense.sh  stop_all.sh
config/: models.conf  pipeline.conf  pipeline.local.conf.example  volleyball_debug.rviz
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mindvision_camera/lib/mindvision_camera/: mindvision_camera_node
install/mindvision_camera/share/ament_index/resource_index/package_run_dependencies/: mindvision_camera
install/mindvision_camera/share/ament_index/resource_index/parent_prefix_path/: mindvision_camera
install/mindvision_camera/share/ament_index/resource_index/rclcpp_components/: mindvision_camera
install/mindvision_camera/share/mindvision_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/mindvision_camera/share/mindvision_camera/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  mindvision_cameraConfig-version.cmake  mindvision_cameraConfig.cmake
install/mindvision_camera/share/mindvision_camera/config/: camera_info.yaml  camera_params.yaml
install/mindvision_camera/share/mindvision_camera/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/mindvision_camera/share/mindvision_camera/launch/: mv_launch.py
install/station_detector/lib/station_detector/: detection_validator.py  kalman_tracker.py  static_image_pub.py  station_pose_estimator  video_publisher.py  yolo_detector.py  yolo_volleyball_node.py
install/station_detector/share/ament_index/resource_index/package_run_dependencies/: station_detector
install/station_detector/share/ament_index/resource_index/parent_prefix_path/: station_detector
install/station_detector/share/station_detector/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/station_detector/share/station_detector/cmake/: station_detectorConfig-version.cmake  station_detectorConfig.cmake
install/station_detector/share/station_detector/config/: fake_camera_info.yaml  station_params.yaml  yolo_params.yaml
install/station_detector/share/station_detector/environment/: ament_prefix_path.dsv  path.dsv
install/station_detector/share/station_detector/launch/: real_camera.launch.py  static_image_pub.launch.py  test_video.launch.py  yolo_real_camera.launch.py  yolo_static_image.launch.py  yolo_test_video.launch.py
install/station_detector_cpp/include/: ball_position_estimator.hpp  ball_tracker.hpp  detection_filter.hpp  trajectory_predictor.hpp  yolo_inference.hpp
install/station_detector_cpp/lib/station_detector_cpp/: ball_detector_node
install/station_detector_cpp/share/station_detector_cpp/: ball_detector_params.yaml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/station_detector_cpp/share/station_detector_cpp/cmake/: station_detector_cppConfig-version.cmake  station_detector_cppConfig.cmake
install/station_detector_cpp/share/station_detector_cpp/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
scripts/: check_deploy.sh  check_realsense_usb.sh  deploy_ipc.sh  download_models.sh  finish_opencv_cuda.sh  install_opencv411_cpu.sh  install_realsense_deps.sh  launch_rviz.sh  launch_vision.sh  rebuild_cv_bridge_opencv411.sh  rebuild_ipc.sh  rebuild_vision_opencv411.sh  ros_env.sh  setup_opencv_cuda.sh  setup_python_ros.sh  sync_to_ipc.sh  test_launch_ipc.sh
src/mindvision_camera/config/: camera_info.yaml  camera_params.yaml
src/mindvision_camera/src/: mv_camera_node.cpp
src/station_detector/: CMakeLists.txt  INSTALL.md  OPENCV_SETUP.md  TRAINING_GUIDE.md  package.xml  requirements.txt
src/station_detector/config/: station_params.yaml  yolo_params.yaml
src/station_detector/launch/: real_camera.launch.py  static_image_pub.launch.py  yolo_static_image.launch.py
src/station_detector/scripts/: TEST_YOLO_MODEL.md  detection_validator.py  kalman_tracker.py  video_publisher.py
src/station_detector/src/: fusion_station_detector.cpp  kalman_filter.cpp  main.cpp
src/station_detector_cpp/: CMakeLists.txt  package.xml  readme.md
src/station_detector_cpp/config/: ball_detector_params.yaml  ball_detector_params_realsense.yaml  ball_detector_params_realsense_416.yaml  ball_detector_params_video.yaml
src/station_detector_cpp/docs/: DEBUGGING.md  DEPLOYMENT.md  MODEL_TRAINING_BRIEF.md
src/station_detector_cpp/include/: ball_position_estimator.hpp  ball_tracker.hpp  detection_filter.hpp  trajectory_predictor.hpp  yolo_inference.hpp
src/station_detector_cpp/launch/: yolo.launch.py  yolo_cpp_realsense.launch.py  yolo_cpp_video.launch.py
src/station_detector_cpp/legacy/: README.md  YOLO_QUICKSTART.md
src/station_detector_cpp/legacy/config/: fake_camera_info.yaml
src/station_detector_cpp/legacy/include/: fusion_station_detector.h  kalman_filter.h  station_pose_estimator.h
src/station_detector_cpp/legacy/launch/: test_video.launch.py  yolo_cpp_realsense.launch.py  yolo_real_camera.launch.py  yolo_test_video.launch.py
src/station_detector_cpp/legacy/scripts/: test_yolo_video.py  yolo_detector.py  yolo_volleyball_node.py
src/station_detector_cpp/legacy/src/: station_pose_estimator.cpp
src/station_detector_cpp/msg/: VolleyballIntercept.msg
src/station_detector_cpp/src/: ball_detector_node.cpp  ball_position_estimator.cpp  ball_tracker.cpp  detection_filter.cpp  trajectory_predictor.cpp  yolo_inference.cpp
src/volleyball_executor/: CMakeLists.txt  package.xml  readme.md
src/volleyball_executor/config/: executor_params.yaml
src/volleyball_executor/docs/: CALIBRATION.md  INTEGRATION_CHECKLIST.md
src/volleyball_executor/launch/: executor.launch.py
src/volleyball_executor/src/: intercept_bridge_node.cpp
src/volleyball_msgs/: CMakeLists.txt  package.xml
src/volleyball_msgs/msg/: StewartControl.msg
(+2 files in other folders)
