<?xml version="1.0"?>
<package format="3">
  <name>volleyball_msgs</name>
  <version>0.1.0</version>
  <description>ROS interfaces shared with Universal Controllers (volleyball stack).</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
